<resources>
    <string name="app_name">FoodOrder</string>
    <string name="slogan">Кушайте постоянно: дома, на работе, в офисе и метро! Наше приложение поможет заказать еду куда-угодно</string>
    <string name="registration">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="authUser">Войти в кабинет</string>
    <string name="hintPhone">Введите номер телефона</string>
    <string name="hintPassword">Введите пароль</string>
    <string name="hintName">Введите Имя</string>
    <string name="addToCard">Добавить в корзину</string>

</resources>