<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_walpaper">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_icon"
        android:contentDescription="@string/app_name"        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtSlogan"
        android:textColor="@android:color/white"
        android:text="@string/slogan"
        android:gravity="center"
        android:textSize="17sp"        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:text="@string/registration"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:background="@color/btnSignUp"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn"
            android:text="@string/auth"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:background="@color/btnSignIn"
            android:layout_margin="10dp"/>

    </LinearLayout>

</RelativeLayout>