<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@drawable/ic_walpaper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:hint="@string/hintPhone"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:maxLength="11"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:hint="@string/hintPassword"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:maxLength="15"
            />


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignIn"
        android:text="@string/authUser"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:background="@color/btnSignIn"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"/>

</RelativeLayout>